--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -49,5 +49,11 @@
         {% endfor %}
       </ul>
     </div>
+	
+	<script
+	  type="text/javascript"
+	  src="{{url_for('static', filename='main.js') }}"
+	></script>
+	
   </body>
 </html>
